// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput renders a Text Input with a placeholder 1`] = `
<div>
  <div
    className="d-flex flex-row align-items-end border-bottom border-light pb-2 px-1"
  >
    <div
      className="d-flex align-items-end justify-content-center"
      style={
        Object {
          "fontSize": 24,
          "minWidth": 30,
        }
      }
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-user fa-w-14 fa-1x "
        color="#525252"
        data-icon="user"
        data-prefix="fal"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M313.6 288c-28.7 0-42.5 16-89.6 16-47.1 0-60.8-16-89.6-16C60.2 288 0 348.2 0 422.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-41.6c0-74.2-60.2-134.4-134.4-134.4zM416 464c0 8.8-7.2 16-16 16H48c-8.8 0-16-7.2-16-16v-41.6C32 365.9 77.9 320 134.4 320c19.6 0 39.1 16 89.6 16 50.4 0 70-16 89.6-16 56.5 0 102.4 45.9 102.4 102.4V464zM224 256c70.7 0 128-57.3 128-128S294.7 0 224 0 96 57.3 96 128s57.3 128 128 128zm0-224c52.9 0 96 43.1 96 96s-43.1 96-96 96-96-43.1-96-96 43.1-96 96-96z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
    <div
      className="w-100 form-group mb-0 pt-3 px-2 p-relative"
    >
      <label
        className="m-0 input-label-sm"
      >
        Label
      </label>
      <input
        className="w-100 py-0"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        placeholder="Placeholder"
        type="text"
      />
    </div>
  </div>
  <small
    className="form-text text-muted"
  >
    Description
  </small>
</div>
`;

exports[`TextInput renders a Text Input with a prefix 1`] = `
<div>
  <div
    className="d-flex flex-row align-items-end border-bottom border-light pb-2 px-1"
  >
    <div
      className="d-flex align-items-end justify-content-center"
      style={
        Object {
          "fontSize": 24,
          "minWidth": 30,
        }
      }
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-user fa-w-14 fa-1x "
        color="#525252"
        data-icon="user"
        data-prefix="fal"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M313.6 288c-28.7 0-42.5 16-89.6 16-47.1 0-60.8-16-89.6-16C60.2 288 0 348.2 0 422.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-41.6c0-74.2-60.2-134.4-134.4-134.4zM416 464c0 8.8-7.2 16-16 16H48c-8.8 0-16-7.2-16-16v-41.6C32 365.9 77.9 320 134.4 320c19.6 0 39.1 16 89.6 16 50.4 0 70-16 89.6-16 56.5 0 102.4 45.9 102.4 102.4V464zM224 256c70.7 0 128-57.3 128-128S294.7 0 224 0 96 57.3 96 128s57.3 128 128 128zm0-224c52.9 0 96 43.1 96 96s-43.1 96-96 96-96-43.1-96-96 43.1-96 96-96z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
    <div
      className="w-100 form-group mb-0 pt-3 px-2 p-relative"
    >
      <label
        className="m-0 input-label"
      >
        Label
      </label>
      <input
        className="w-100 py-0"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        prefix={
          <div
            style={
              Object {
                "background": "red",
                "height": 20,
                "width": 20,
              }
            }
          />
        }
        type="text"
      />
    </div>
  </div>
  <small
    className="form-text text-muted"
  >
    Description
  </small>
</div>
`;

exports[`TextInput renders a Text Input with a suffix 1`] = `
<div>
  <div
    className="d-flex flex-row align-items-end border-bottom border-light pb-2 px-1"
  >
    <div
      className="d-flex align-items-end justify-content-center"
      style={
        Object {
          "fontSize": 24,
          "minWidth": 30,
        }
      }
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-user fa-w-14 fa-1x "
        color="#525252"
        data-icon="user"
        data-prefix="fal"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M313.6 288c-28.7 0-42.5 16-89.6 16-47.1 0-60.8-16-89.6-16C60.2 288 0 348.2 0 422.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-41.6c0-74.2-60.2-134.4-134.4-134.4zM416 464c0 8.8-7.2 16-16 16H48c-8.8 0-16-7.2-16-16v-41.6C32 365.9 77.9 320 134.4 320c19.6 0 39.1 16 89.6 16 50.4 0 70-16 89.6-16 56.5 0 102.4 45.9 102.4 102.4V464zM224 256c70.7 0 128-57.3 128-128S294.7 0 224 0 96 57.3 96 128s57.3 128 128 128zm0-224c52.9 0 96 43.1 96 96s-43.1 96-96 96-96-43.1-96-96 43.1-96 96-96z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
    <div
      className="w-100 form-group mb-0 pt-3 px-2 p-relative"
    >
      <label
        className="m-0 input-label"
      >
        Label
      </label>
      <input
        className="w-100 py-0"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        suffix={
          <div
            style={
              Object {
                "background": "red",
                "height": 20,
                "width": 20,
              }
            }
          />
        }
        type="text"
      />
    </div>
  </div>
  <small
    className="form-text text-muted"
  >
    Description
  </small>
</div>
`;

exports[`TextInput renders a Text Input with an error 1`] = `
<div>
  <div
    className="d-flex flex-row align-items-end border-bottom border-light pb-2 px-1"
  >
    <div
      className="d-flex align-items-end justify-content-center"
      style={
        Object {
          "fontSize": 24,
          "minWidth": 30,
        }
      }
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-user fa-w-14 fa-1x "
        color="#525252"
        data-icon="user"
        data-prefix="fal"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M313.6 288c-28.7 0-42.5 16-89.6 16-47.1 0-60.8-16-89.6-16C60.2 288 0 348.2 0 422.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-41.6c0-74.2-60.2-134.4-134.4-134.4zM416 464c0 8.8-7.2 16-16 16H48c-8.8 0-16-7.2-16-16v-41.6C32 365.9 77.9 320 134.4 320c19.6 0 39.1 16 89.6 16 50.4 0 70-16 89.6-16 56.5 0 102.4 45.9 102.4 102.4V464zM224 256c70.7 0 128-57.3 128-128S294.7 0 224 0 96 57.3 96 128s57.3 128 128 128zm0-224c52.9 0 96 43.1 96 96s-43.1 96-96 96-96-43.1-96-96 43.1-96 96-96z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
    <div
      className="w-100 form-group mb-0 pt-3 px-2 p-relative"
    >
      <label
        className="m-0 input-label"
      >
        Label
      </label>
      <input
        className="w-100 py-0"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        type="text"
      />
    </div>
    <div
      className="d-flex align-items-end justify-content-center"
      style={
        Object {
          "fontSize": 24,
          "minWidth": 30,
        }
      }
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-exclamation-circle fa-w-16 fa-1x "
        color="#cb045b"
        data-icon="exclamation-circle"
        data-prefix="fal"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M256 40c118.621 0 216 96.075 216 216 0 119.291-96.61 216-216 216-119.244 0-216-96.562-216-216 0-119.203 96.602-216 216-216m0-32C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm-11.49 120h22.979c6.823 0 12.274 5.682 11.99 12.5l-7 168c-.268 6.428-5.556 11.5-11.99 11.5h-8.979c-6.433 0-11.722-5.073-11.99-11.5l-7-168c-.283-6.818 5.167-12.5 11.99-12.5zM256 340c-15.464 0-28 12.536-28 28s12.536 28 28 28 28-12.536 28-28-12.536-28-28-28z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
  </div>
  <small
    className="form-text text-muted"
  >
    Here's an error
  </small>
</div>
`;

exports[`TextInput renders a Text Input with using success 1`] = `
<div>
  <div
    className="d-flex flex-row align-items-end border-bottom border-light pb-2 px-1"
  >
    <div
      className="d-flex align-items-end justify-content-center"
      style={
        Object {
          "fontSize": 24,
          "minWidth": 30,
        }
      }
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-user fa-w-14 fa-1x "
        color="#525252"
        data-icon="user"
        data-prefix="fal"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M313.6 288c-28.7 0-42.5 16-89.6 16-47.1 0-60.8-16-89.6-16C60.2 288 0 348.2 0 422.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-41.6c0-74.2-60.2-134.4-134.4-134.4zM416 464c0 8.8-7.2 16-16 16H48c-8.8 0-16-7.2-16-16v-41.6C32 365.9 77.9 320 134.4 320c19.6 0 39.1 16 89.6 16 50.4 0 70-16 89.6-16 56.5 0 102.4 45.9 102.4 102.4V464zM224 256c70.7 0 128-57.3 128-128S294.7 0 224 0 96 57.3 96 128s57.3 128 128 128zm0-224c52.9 0 96 43.1 96 96s-43.1 96-96 96-96-43.1-96-96 43.1-96 96-96z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
    <div
      className="w-100 form-group mb-0 pt-3 px-2 p-relative"
    >
      <label
        className="m-0 input-label"
      >
        Label
      </label>
      <input
        className="w-100 py-0"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        type="text"
      />
    </div>
    <div
      className="d-flex align-items-end justify-content-center"
      style={
        Object {
          "fontSize": 24,
          "minWidth": 30,
        }
      }
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-check-circle fa-w-16 fa-1x "
        color="#1ec27f"
        data-icon="check-circle"
        data-prefix="fal"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M256 8C119.033 8 8 119.033 8 256s111.033 248 248 248 248-111.033 248-248S392.967 8 256 8zm0 464c-118.664 0-216-96.055-216-216 0-118.663 96.055-216 216-216 118.664 0 216 96.055 216 216 0 118.663-96.055 216-216 216zm141.63-274.961L217.15 376.071c-4.705 4.667-12.303 4.637-16.97-.068l-85.878-86.572c-4.667-4.705-4.637-12.303.068-16.97l8.52-8.451c4.705-4.667 12.303-4.637 16.97.068l68.976 69.533 163.441-162.13c4.705-4.667 12.303-4.637 16.97.068l8.451 8.52c4.668 4.705 4.637 12.303-.068 16.97z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
  </div>
  <small
    className="form-text text-muted"
  >
    Description
  </small>
</div>
`;

exports[`TextInput renders a Text Input without crashing 1`] = `
<div>
  <div
    className="d-flex flex-row align-items-end border-bottom border-light pb-2 px-1"
  >
    <div
      className="d-flex align-items-end justify-content-center"
      style={
        Object {
          "fontSize": 24,
          "minWidth": 30,
        }
      }
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-user fa-w-14 fa-1x "
        color="#525252"
        data-icon="user"
        data-prefix="fal"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M313.6 288c-28.7 0-42.5 16-89.6 16-47.1 0-60.8-16-89.6-16C60.2 288 0 348.2 0 422.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-41.6c0-74.2-60.2-134.4-134.4-134.4zM416 464c0 8.8-7.2 16-16 16H48c-8.8 0-16-7.2-16-16v-41.6C32 365.9 77.9 320 134.4 320c19.6 0 39.1 16 89.6 16 50.4 0 70-16 89.6-16 56.5 0 102.4 45.9 102.4 102.4V464zM224 256c70.7 0 128-57.3 128-128S294.7 0 224 0 96 57.3 96 128s57.3 128 128 128zm0-224c52.9 0 96 43.1 96 96s-43.1 96-96 96-96-43.1-96-96 43.1-96 96-96z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
    <div
      className="w-100 form-group mb-0 pt-3 px-2 p-relative"
    >
      <label
        className="m-0 input-label"
      >
        Label
      </label>
      <input
        className="w-100 py-0"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        type="text"
      />
    </div>
  </div>
  <small
    className="form-text text-muted"
  >
    Description
  </small>
</div>
`;

exports[`TextInput renders a disabled Text Input 1`] = `
<div>
  <div
    className="d-flex flex-row align-items-end border-bottom border-light pb-2 px-1"
  >
    <div
      className="d-flex align-items-end justify-content-center"
      style={
        Object {
          "fontSize": 24,
          "minWidth": 30,
        }
      }
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-user fa-w-14 fa-1x "
        color="#e6e6e6"
        data-icon="user"
        data-prefix="fal"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M313.6 288c-28.7 0-42.5 16-89.6 16-47.1 0-60.8-16-89.6-16C60.2 288 0 348.2 0 422.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-41.6c0-74.2-60.2-134.4-134.4-134.4zM416 464c0 8.8-7.2 16-16 16H48c-8.8 0-16-7.2-16-16v-41.6C32 365.9 77.9 320 134.4 320c19.6 0 39.1 16 89.6 16 50.4 0 70-16 89.6-16 56.5 0 102.4 45.9 102.4 102.4V464zM224 256c70.7 0 128-57.3 128-128S294.7 0 224 0 96 57.3 96 128s57.3 128 128 128zm0-224c52.9 0 96 43.1 96 96s-43.1 96-96 96-96-43.1-96-96 43.1-96 96-96z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
    <div
      className="w-100 form-group mb-0 pt-3 px-2 p-relative"
    >
      <label
        className="m-0 input-label"
      >
        Label
      </label>
      <input
        className="w-100 py-0"
        disabled={true}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        type="text"
      />
    </div>
    <div
      className="d-flex align-items-end justify-content-center"
      style={
        Object {
          "fontSize": 24,
          "minWidth": 30,
        }
      }
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-ban fa-w-16 fa-1x "
        color="#e6e6e6"
        data-icon="ban"
        data-prefix="fal"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M256 8C119.033 8 8 119.033 8 256s111.033 248 248 248 248-111.033 248-248S392.967 8 256 8zM103.265 408.735c-80.622-80.622-84.149-208.957-10.9-293.743l304.644 304.643c-84.804 73.264-213.138 69.706-293.744-10.9zm316.37-11.727L114.992 92.365c84.804-73.263 213.137-69.705 293.743 10.9 80.622 80.621 84.149 208.957 10.9 293.743z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
  </div>
  <small
    className="form-text text-muted"
  >
    Description
  </small>
</div>
`;

exports[`TextInput simulates the click of a Text Input 1`] = `ReactWrapper {}`;

exports[`TextInput simulates the click of a Text Input 2`] = `ReactWrapper {}`;

exports[`TextInput simulates the mouse enter and leave of a Text Input 1`] = `ReactWrapper {}`;

exports[`TextInput simulates the mouse enter and leave of a Text Input 2`] = `ReactWrapper {}`;

exports[`TextInput simulates the mouse enter and leave of a Text Input 3`] = `ReactWrapper {}`;
